# django_init_admin

./: LICENSE  README.md  setup.cfg
.github/workflows/: package.yml
init_admin_command/management/commands/: initadmin.py
