[metadata]
name = django_init_admin_command
version = 0.1
description = A Django admin command to create an admin user if no user exists
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gri38/django_init_admin
author = gri38
author_email = onzeweb@zaclys.net
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=2.2

[options.packages.find]
where = django_init_admin_command
